--- a/WebContent/assets/css/web/eventos.css
+++ b/WebContent/assets/css/web/eventos.css
@@ -61,6 +61,11 @@
 	margin-bottom: 0;
 }
 
+.card-reveal p {
+	margin-top: 30px;
+	text-align: justify;
+	font-size: 14px;
+}
 .view p {
     font-size: 14px;
     position: relative;
