--- a/WebContent/assets/css/web/navbar.css
+++ b/WebContent/assets/css/web/navbar.css
@@ -14,7 +14,7 @@
 .navbar {
 	height: 89px;
 	background-color: #fff !important;
-	border-bottom: 0.5px solid #87796F !important;
+/* 	border-bottom: 0.5px solid #87796F !important; */
 	min-height: 90px !important;
 	padding: 0;
 	width: 100%;
