--- a/WebContent/views/web/noticias.zul
+++ b/WebContent/views/web/noticias.zul
@@ -3,168 +3,264 @@
 		type="text/css">
 	</n:link>
 	<div style="background-color:	 #c2d62d; height: 10px;"></div>
-	<div sclass="container">
-		<div sclass="row">
-			<div sclass="col s12 text-center"
-				style="padding-top: 35px;">
-				<label value="NOTICIAS" sclass="titulo"></label>
-			</div>
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/foto-ejemplo.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
+	<div class="bodyNoticias">
+		<div sclass="container bodyNoticias" apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Main')">
+			<div sclass="row">
+				<div sclass="col s12 text-center"
+					style="padding: 20px;">
+					<label value="NOTICIAS" sclass="titulo"></label>
 				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
+				<div sclass="col s12">
+					<div sclass="col s4 marcoNoticia text-center"
+							style="padding: 10px 18px;">
+						<div class="row box-noticia">
+							<label value="Torneo de golf a beneficio de Fanca Lara"
+								sclass="tituloNoticia">
+							</label>
+							<image src="/imagenes/portal/galeria1.png"
+								sclass="imgNoticia img-responsive">
+							</image>
+							<div class="col s12 info">
+								<div class="col s12 fechaNoticia">
+									<label 
+										value="Fecha: 03/07/2016">
+									</label>
+								</div>
+								<div class="col s12 block-ellipsis">
+									<label sclass="text-justify"
+										value="La Fundación Amigos del Niño con Cáncer del estado Lara, Fanca, organizó el décimo primer torneo de golf en las instalaciones del Barquisimeto Golf Club, con la participación de 150 jugadores.
+	
+	Bajo el nombre de “Un juego por la vida”, la finalidad de esta actividad fue la recolección de fondos para la culminación del primer albergue para niños con cáncer.
+	
+	
+	 
+	La Lcda. María Elena de Mantovani, integrante del comité organizador del XI Torneo de Golf, destacó que para esta edición lograron una colaboración récord de patrocinantes con 96 colaboradores, además de 150 jugadores, un significativo número de participantes, una muestra de que el torneo se ha convertido en una tradición dentro de los jugadores de golf locales, quienes colaboran por una noble causa.
+	
+	“Aunque la actividad está dirigida a un grupo bastante específico, hemos tenido mucha receptividad y cada año superamos las expectativas de participación. Este año con una gran cantidad de patrocinantes que se unieron a Fanca para llevar a cabo este evento. Es un torneo que siempre se llena y está bastante establecido”.
+	
+	El albergue para niños con cáncer ha sido uno de los objetivo a alcanzar por esta fundación y servirá para brindar alojo a 18 niños con sus madres que acudan desde lugares muy distantes al Hospital Antonio María Pineda para realizarse sus tratamientos.
+	
+	Espera ser concluido para los primeros meses del año que viene, gracias a la reconstrucción de una vivienda en la Avenida Concordia, que contará además con salón de clases, parque infantil y áreas de pernocta.
+	
+	“Más del 60% de los niños que tenemos en la fundación vienen de lugares lejanos, de otros municipios y pueblos distantes y tardan aproximadamente tres horas en llegar al Hospital para los tratamientos, por ello dejan de acudir. Queremos darle las facilidades para que los niños no abandonen el tratamiento para el cáncer”.">
+									</label>
+								</div>
+								<div class="col s12 fechaNoticia">
+									<a onClick="@command('detalleNoticia')">
+										Ver más
+									</a>
+								</div>						
+							</div>
+							<div class="col s12 citas">
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+							</div>			
+						</div>
+					</div>
+		
+					<div sclass="col s4 marcoNoticia text-center"
+							style="padding: 10px 18px;">
+						<div class="row box-noticia">
+							<label value="Título de la Noticia"
+								sclass="tituloNoticia">
+							</label>
+							<image src="/imagenes/portal/galeria2.png"
+								sclass="imgNoticia img-responsive">
+							</image>
+							<div class="col s12 info">
+								<div class="col s12 fechaNoticia">
+									<label 
+										value="Fecha: 03/07/2016">
+									</label>
+								</div>
+								<div class="col s12 block-ellipsis">
+									<label sclass="text-justify"
+										value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
+							 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
+							 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
+							 eaque. Illum, sed, laborum!">
+									</label>
+								</div>
+								<div class="col s12 fechaNoticia">
+									<a onClick="@command('detalleNoticia')">
+										Ver más
+									</a>
+								</div>						
+							</div>
+							<div class="col s12 citas">
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+							</div>			
+						</div>
+					</div>
+		
+					<div sclass="col s4 marcoNoticia text-center"
+							style="padding: 10px 18px;">
+						<div class="row box-noticia">
+							<label value="Título de la Noticia"
+								sclass="tituloNoticia">
+							</label>
+							<image src="/imagenes/portal/galeria2.png"
+								sclass="imgNoticia img-responsive">
+							</image>
+							<div class="col s12 info">
+								<div class="col s12 fechaNoticia">
+									<label 
+										value="Fecha: 03/07/2016">
+									</label>
+								</div>
+								<div class="col s12 block-ellipsis">
+									<label sclass="text-justify"
+										value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
+							 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
+							 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
+							 eaque. Illum, sed, laborum!">
+									</label>
+								</div>
+								<div class="col s12 fechaNoticia">
+									<a onClick="@command('detalleNoticia')">
+										Ver más
+									</a>
+								</div>						
+							</div>
+							<div class="col s12 citas">
+								<div sclass="divTag">
+									<label value="Tag"></label><span sclass="fa fa-circle"></span>
+								</div>
+							</div>			
+						</div>
 					</div>
 				</div>
-			</div>
-
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/foto-ejemplo.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
-				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
+				<div sclass="col s4 marcoNoticia text-center"
+						style="padding: 10px 18px;">
+					<div class="row box-noticia">
+						<label value="Título de la Noticia"
+							sclass="tituloNoticia">
+						</label>
+						<image src="/imagenes/portal/galeria2.png"
+							sclass="imgNoticia img-responsive">
+						</image>
+						<div class="col s12 info">
+							<div class="col s12 fechaNoticia">
+								<label 
+									value="Fecha: 03/07/2016">
+								</label>
+							</div>
+							<div class="col s12 block-ellipsis">
+								<label sclass="text-justify"
+									value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
+						 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
+						 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
+						 eaque. Illum, sed, laborum!">
+								</label>
+							</div>
+							<div class="col s12 fechaNoticia">
+								<a onClick="@command('detalleNoticia')">
+									Ver más
+								</a>
+							</div>						
+						</div>
+						<div class="col s12 citas">
+							<div sclass="divTag">
+								<label value="Tag"></label><span sclass="fa fa-circle"></span>
+							</div>
+							<div sclass="divTag">
+								<label value="Tag"></label><span sclass="fa fa-circle"></span>
+							</div>
+							<div sclass="divTag">
+								<label value="Tag"></label><span sclass="fa fa-circle"></span>
+							</div>
+						</div>			
 					</div>
 				</div>
-			</div>
-
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/foto-ejemplo.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
-				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
+	
+				<div sclass="col s4 marcoNoticia text-center"
+						style="padding: 10px 18px;">
+					<div class="row box-noticia">
+						<label value="Título de la Noticia"
+							sclass="tituloNoticia">
+						</label>
+						<image src="/imagenes/portal/img-por-defecto.png"
+							sclass="imgNoticia img-responsive">
+						</image>
+						<div class="col s12 info">
+							<div class="col s12 fechaNoticia">
+								<label 
+									value="Fecha: 03/07/2016">
+								</label>
+							</div>
+							<div class="col s12 block-ellipsis">
+								<label sclass="text-justify"
+									value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
+						 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
+						 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
+						 eaque. Illum, sed, laborum!">
+								</label>
+							</div>
+							<div class="col s12 fechaNoticia">
+								<a onClick="@command('detalleNoticia')">
+									Ver más
+								</a>
+							</div>						
+						</div>
+						<div class="col s12 citas">
+							<div sclass="divTag">
+								<label value="Tag"></label><span sclass="fa fa-circle"></span>
+							</div>
+							<div sclass="divTag">
+								<label value="Tag"></label><span sclass="fa fa-circle"></span>
+							</div>
+						</div>			
 					</div>
 				</div>
-			</div>
-
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/foto-ejemplo.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
-				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
+	
+				<div sclass="col s4 marcoNoticia text-center"
+						style="padding: 10px 18px;">
+					<div class="row box-noticia">
+						<label value="Título de la Noticia"
+							sclass="tituloNoticia">
+						</label>
+						<image src="/imagenes/portal/galeria2.png"
+							sclass="imgNoticia img-responsive">
+						</image>
+						<div class="col s12 info">
+							<div class="col s12 fechaNoticia">
+								<label 
+									value="Fecha: 03/07/2016">
+								</label>
+							</div>
+							<div class="col s12 block-ellipsis">
+								<label sclass="text-justify"
+									value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
+						 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
+						 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
+						 eaque. Illum, sed, laborum!">
+								</label>
+							</div>
+							<div class="col s12 fechaNoticia">
+								<a onClick="@command('detalleNoticia')">
+									Ver más
+								</a>
+							</div>						
+						</div>
+						<div class="col s12 citas">
+						</div>			
 					</div>
 				</div>
+	
 			</div>
-
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/img-por-defecto.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
-				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
-					</div>
-				</div>
-			</div>
-
-			<div sclass="col s3 offset-s1 marcoNoticia text-center"
-				style="padding-top: 12px;">
-				<label value="Título de la Noticia"
-					sclass="tituloNoticia">
-				</label>
-				<image src="/imagenes/foto-ejemplo.png"
-					sclass="imgNoticia">
-				</image>
-				<div style="padding-top: 7px;">
-					<label sclass="fechaNoticia"
-						value="Fecha: 03/07/2016">
-					</label>
-				</div>
-				<div style="padding-top: 7px;">
-					<label sclass="text-justify"
-						value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo 
-			 reprehenderit commodi fuga dolores eligendi necessitatibus quo. Minus 
-			 numquam necessitatibus velit assumenda ipsum id eius laudantium mollitia 
-			 eaque. Illum, sed, laborum!">
-					</label>
-					<div sclass="divTag">
-						<label value="Tag *"></label>
-					</div>
-				</div>
-			</div>
-
 		</div>
 	</div>
 </zk>
