--- a/WebContent/assets/css/web/eventos.css
+++ b/WebContent/assets/css/web/eventos.css
@@ -14,29 +14,25 @@
 	font-size: 16px;
 }
 
-.eventos .titulo {
+.titulo {
 	color: #F26B7A;
 	font-size: 18px;
-	margin-bottom: 30px;
-}
-
-.eventos td, th {
-	padding: 0;
+	margin-bottom: 10px;
 }
 
 .view {
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     float: left;
     overflow: hidden;
     position: relative;
-    text-align: center;
+/*     text-align: center; */
     box-shadow: 1px 1px 2px #e6e6e6;
     cursor: default;
 }
 
 .view .mask, .view .content {
-    width: 300px;
+    width: 100%;
     height: 200px;
     position: absolute;
     overflow: hidden;
@@ -51,34 +47,43 @@
 
 .view h2 {
     text-transform: uppercase;
-    color: #fff;
-    text-align: center;
-    position: relative;
-    font-size: 17px;
-    padding: 10px;
+    color: #F26B7A;
+	font-size: 18px;
+    text-align: left;
+    padding: 0;
+/*     position: relative; */
     background: hsla(0,0%,0%,0.8);
-    margin: 20px 0 0 0;
+/*     margin: 5px 0 0 0; */
+	line-height: 60%;
+}
+
+.view span {
+	text-align: right;
+	color: #84BBCE;
+	padding: 0;
+	margin: 0;
+}
+
+.abc {
+	margin-bottom: 0;
 }
 
 .view p {
-    font-size: 12px;
+    font-size: 14px;
     position: relative;
     color: #fff;
-    padding: 10px 20px 20px;
-    text-align: center;
+    padding: 10px 20px;
+    text-align: justify;
+    margin: 0;
 }
 
 .view a.info {
     display: inline-block;
     text-decoration: none;
-    padding: 7px 14px;
-    background: #F26B7A;
+    padding: 0 14px;
+/*     background: #F26B7A; */
     color: #fff;
     text-transform: uppercase;
-}
-
-.view a.info:hover {
-    box-shadow: 0 0 5px #000;
 }
 
 .view img {
@@ -94,7 +99,7 @@
     width: 300px;
     padding: 0;
     height: 300px;
-    background-color: rgba(135,121,111,0.7);
+    background-color: rgba(135,121,111,0.8);
 /*     background-color: hsla(213,33%,59%,0.7); */
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
@@ -150,7 +155,7 @@
     transition: all 0.2s 0.1s ease-in-out;
 }
 
-.view:hover .mask { 
+.card.small:hover .mask { 
     opacity: 1;
     -webkit-transform: translate(0px, -100px) ;
     -moz-transform: translate(0px, -100px) ;
@@ -159,7 +164,7 @@
     transform: translate(0px, -100px) ;
 }
 
-.view:hover h2 { 
+.card.small:hover h2 { 
     -webkit-transform: translate(0px,0px);
     -moz-transform: translate(0px,0px);
     -o-transform: translate(0px,0px);
@@ -172,7 +177,7 @@
     transition-delay: 0.3s;
 }
 
-.view:hover p {
+.card.small:hover p {
     -webkit-transform: translate(0px,0px);
     -moz-transform: translate(0px,0px);
     -o-transform: translate(0px,0px);
@@ -185,7 +190,7 @@
     transition-delay: 0.4s;
 }
 
-.view:hover a.info {
+.card.small:hover a.info {
     -webkit-transform: translate(0px,0px);
     -moz-transform: translate(0px,0px);
     -o-transform: translate(0px,0px);
